# regression

./: .gitignore  LICENSE.md  README.md  pyproject.toml
notebooks/: linear.ipynb  ridge.ipynb
